--- a/connect_four/css/style.css
+++ b/connect_four/css/style.css
@@ -11,11 +11,44 @@ body {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 5rem;
 }
 
 h2{
-    font-size: 3rem;
+    font-size: 4rem;
+}
+
+.gameplay{ 
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button{
+    height: 80px;
+    width: 150px;
+    border-radius: 15px;
+    background-color: #F7EDE2; 
+    color:#9B9AE2;
+    font-family: 'Patrick Hand SC', monospace;
+    border: 2px solid #F7EDE2;
+    font-size: 1.5rem;
+}
+
+button:hover{
+    background-color: #9B9AE2; 
+    color:#F7EDE2;
+} 
+
+button:focus{
+    outline:none;
 }
 
 .game-container {
@@ -24,17 +57,7 @@ h2{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    /* border: 5px solid teal; */
 }
-
-/* .row {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-} */
 
 .slot{
     display: flex;
