--- a/connect_four/css/style.css
+++ b/connect_four/css/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background-color: #9B9AE2;
+    background-color: #F7EDE2;
     font-family: 'Patrick Hand SC', monospace;
     text-align: center;
 }
@@ -39,16 +39,16 @@ button{
     height: 80px;
     width: 150px;
     border-radius: 15px;
-    background-color: #F7EDE2; 
-    color:#9B9AE2;
+    background-color: #84A59D; 
+    color:#F7EDE2;
     font-family: 'Patrick Hand SC', monospace;
-    border: 2px solid #F7EDE2;
+    border: 2px solid #84A59D;
     font-size: 1.5rem;
 }
 
 button:hover{
-    background-color: #9B9AE2; 
-    color:#F7EDE2;
+    background-color: #F7EDE2; 
+    color:#84A59D;
 } 
 
 button:focus{
@@ -69,7 +69,7 @@ button:focus{
     height:150px;
     justify-content: center;
     align-items: center;
-    background-color: #ffe44a;
+    background-color: #F8CF8B;
 }
 
 .hole{
@@ -86,10 +86,18 @@ button:focus{
     justify-content: space-evenly;
 } */
 
+.red {
+    background-color: #C91818;
+}
+
+.blue {
+    background-color: #1874C9;
+}
+
 .team-1 {
-    color: #C91818
+    color: #C91818;
 }
 
 .team-2 {
-    color: #1874C9
+    color: #1874C9;
 }
