--- a/connect_four/css/style.css
+++ b/connect_four/css/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background-color: #F7EDE2;
+    background-color: #f5efe9;
     font-family: 'Patrick Hand SC', monospace;
     text-align: center;
 }
@@ -31,7 +31,8 @@ h3{
 
 .controls{
     display: flex;
-    justify-content: center;
+    height: 100%;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -39,21 +40,36 @@ button{
     height: 80px;
     width: 150px;
     border-radius: 15px;
-    background-color: #84A59D; 
-    color:#F7EDE2;
     font-family: 'Patrick Hand SC', monospace;
-    border: 2px solid #84A59D;
     font-size: 1.5rem;
+    color:#f5efe9;
+    cursor: pointer;
+    margin: 40px 0;
 }
-
-button:hover{
-    background-color: #F7EDE2; 
-    color:#84A59D;
-} 
 
 button:focus{
     outline:none;
 }
+
+#how-to{
+    background-color: #E07A5F; 
+    border: 2px solid #E07A5F;
+}
+
+#how-to:hover{
+    background-color: #f5efe9; 
+    color:#E07A5F;
+} 
+
+#start{
+    background-color: #84A59D; 
+    border: 2px solid #84A59D;
+}
+
+#start:hover{
+    background-color: #f5efe9; 
+    color:#84A59D;
+} 
 
 .game-container {
     width: 900px;
@@ -79,12 +95,9 @@ button:focus{
     background-color: white;
 }
 
-/* .streak {
-    display:flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-evenly;
-} */
+.available:hover{
+    background-color: rgb(244, 236, 190);
+}
 
 .red {
     background-color: #C91818;
