--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ p{
 }
 
 .gameplay{ 
-    /* width: 100%; */
     width: 1600px;
     display: flex;
     justify-content: space-evenly;
@@ -242,3 +241,37 @@ button:focus{
     background-color: #90BE6D;
     color: white;
 } 
+
+@media only screen and (max-width:1680px) {
+    h1 {
+        font-size: 4rem;
+    }
+    
+    h2{
+        font-size: 2.5rem;
+    }
+    
+    h3{
+        font-size: 2.0rem;
+    }
+
+    .gameplay{ 
+        width: 1400px;
+    }
+
+    .game-container {
+        width: 700px;
+        min-width: 700px;
+        max-width: 700px;
+    }
+
+    .player{
+        width:50px;
+        height:50px;
+    }
+
+    .slot{
+        max-width: 100px;
+        max-height: 100px;
+    }
+}
